[bugfix] [ui] fixed shortcuts table overflowing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -392,5 +392,5 @@ input {
   grid-template-columns: 1fr 3fr;
   padding: var(--border-size);
   overflow: scroll;
-  height: available;
+  height: 100%;
 }
